--- a/.github/workflows/os_java_ci.yml
+++ b/.github/workflows/os_java_ci.yml
@@ -19,7 +19,7 @@ jobs:
     name: OS x Java
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest]
+        os: [windows-latest]
         java: [11]
     runs-on: ${{ matrix.os }}
     steps:
