--- a/.github/workflows/os_java_ci.yml
+++ b/.github/workflows/os_java_ci.yml
@@ -41,6 +41,11 @@ jobs:
           restore-keys: ${{ runner.os }}-m2
       - name: Build with Maven
         run: mvn -B clean install -Dfull
+      - name: Upload dist
+        uses: actions/upload-artifact@v2
+        with:
+          name: my-distribution
+          path: D:/a/optaplanner/optaplanner/optaplanner-distribution/target/optaplanner-distribution-8.1.0-SNAPSHOT.zip
 
   # Early feedback on a compatibility with the newest Java version.
   # TODO: update each time a new major Java version is released.
