--- a/.github/workflows/os_java_dist_skiptests_ci copy.yml
+++ b/.github/workflows/os_java_dist_skiptests_ci copy.yml
@@ -40,7 +40,7 @@ jobs:
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
       - name: Build with Maven
-        run: mvn -B clean install -DskipTests
+        run: mvn -B clean install -DskipTests -Dfull
       - name: Upload dist
         uses: actions/upload-artifact@v2
         with:
